--- a/ProjWFFerramentas/App.config
+++ b/ProjWFFerramentas/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
 
-  <connectionStrings>
-    <add name="ConexaoSQLServer" connectionString="Data Source=(PC-LEONARDO);Initial Catalog=dbfuncionario;Integrated Security=True;" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+   <connectionStrings>
+		<add name="ConnectionSQLServer" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=dbfuncionario;Integrated Security=True;" providerName="System.Data.SqlClient" />
+	</connectionStrings>
 </configuration>
